[package]
name = "launchpad-locked-tokens-and-guaranteed-tickets"
version = "0.0.0"
authors = ["Dorin Marian Iancu <dorin.iancu@dharitri.com>"]
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.launchpad-common]
path = "../launchpad-common"

[dependencies.launchpad-locked-tokens]
path = "../launchpad-locked-tokens"

[dependencies.launchpad-guaranteed-tickets]
path = "../launchpad-guaranteed-tickets"

[dependencies.dharitri-sc]
version = "0.12.1"

[dev-dependencies.dharitri-sc-meta]
version = "0.12.1"

[dev-dependencies]
num-bigint = "0.4.2"

[dev-dependencies.dharitri-sc-scenario]
version = "0.12.1"
