[package]
name = "launchpad-guaranteed-tickets-meta"
version = "0.0.0"
authors = ["Dorin Marian Iancu <dorin.iancu@dharitri.com>"]
edition = "2021"
publish = false

[dependencies.launchpad-guaranteed-tickets]
path = ".."

[dependencies.dharitri-sc]
version = "0.12.1"

[dependencies.dharitri-sc-meta]
version = "0.12.1"
