[package]
name = "launchpad-guaranteed-tickets-wasm"
version = "0.0.0"
authors = ["Dorin Marian Iancu <dorin.iancu@dharitri.com>"]
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"

[dependencies.launchpad-guaranteed-tickets]
path = ".."

[dependencies.dharitri-sc-wasm-adapter]
version = "0.12.1"

[workspace]
members = ["."]
